[Extended Processes] Pass parent to created plugin

The plugin relies on its parent to be `KSysGuard::Processes`.

Regression from d4d8a5a28d22d4d2958052738c2f4110955b47af

BUG: 451148